# test_pjct

./: README.MD  docker-compose.yml
nginx/: nginx.conf
postgres/: init.sql
user_service/: Dockerfile  entrypoint_consumer.sh  pyproject.toml  run.py  setup.cfg
user_service/adapters/: cli.py
user_service/adapters/database/: mapping.py  repositories.py  settings.py  tables.py
user_service/adapters/message_bus/: consumer.py  scheme.py  settings.py
user_service/adapters/users_api/: app.py  auth.py  controllers.py
user_service/application/: dataclasses.py  errors.py  interfaces.py  services.py
user_service/composites/: app_api.py  cli.py
