[metadata]
name = demo-project
version = 1.0.0
description = Демо проект, построенный по чистой архитектуре
author = Kerim Shaydullin
author_email = kerim94@bk.ru
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.7.9

install_requires =
    attrs
    PyJWT
    pydantic~=1.8.2
    sqlalchemy
    alembic
    hupper
    gunicorn
    waitress
    click
    python-json-logger
    classic-components
    classic-aspects
    classic-app-layer
    classic-http-api
    classic-http-auth
    classic-sql-storage
    classic-messaging
    classic-messaging-kombu
    pytest
    psycopg2-binary

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0

[options.entry_points]
console_scripts =
    user_consumer=user_service.composites.cli:cli

;pip install -e ".[dev]"  #library installation